downgrade to J17 for compatibility tests with SKLTP apps. - also cleaned up logging relating to SLF4J api instead of direct Log4J2. Downstream apps can choose.
(cherry picked from commit a683360dda473c773a4cba69cc4b0d180a82dc62)